--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,10 @@
 			<version>0.1.0.0-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.techsure</groupId>
+			<artifactId>codedriver-autoexec-base</artifactId>
+			<version>0.1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
