--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,9 @@
 		</dependency>
 		<dependency>
 			<groupId>com.techsure</groupId>
-			<artifactId>codedriver-autoexec-base</artifactId>
+			<artifactId>codedriver-cmdb-base</artifactId>
 			<version>0.1.0.0-SNAPSHOT</version>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.techsure</groupId>
