--story=1005659 --user=赖文韬 巡检报告-导出优化 https://www.tapd.cn/54247054/s/1195077

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 					<include>META-INF/**</include>
 				</includes>
 			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>template/**</include>
+				</includes>
+			</resource>
 		</resources>
 		<plugins>
 			<plugin>
