--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>template/**</include>
+					<include>codedriver/**</include>
 				</includes>
 			</resource>
 		</resources>
