--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright(c) 2022 TechSure Co., Ltd. All Rights Reserved.
+  ~ 本内容仅限于深圳市赞悦科技有限公司内部传阅，禁止外泄以及用于其他的商业项目。
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -38,25 +43,18 @@
 		<dependency>
 			<groupId>com.techsure</groupId>
 			<artifactId>codedriver-framework</artifactId>
-			<version>[1.0.0,)</version>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.techsure</groupId>
 			<artifactId>codedriver-cmdb-base</artifactId>
-			<version>[1.0.0,)</version>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.techsure</groupId>
 			<artifactId>codedriver-inspect-base</artifactId>
-			<version>[1.0.0,)</version>
 		</dependency>
 		<dependency>
 			<groupId>com.techsure</groupId>
 			<artifactId>codedriver-autoexec-base</artifactId>
-			<version>[1.0.0,)</version>
-			<optional>true</optional>
 		</dependency>
 	</dependencies>
 </project>
