--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 	<parent>
 		<groupId>com.techsure</groupId>
 		<artifactId>codedriver-parent</artifactId>
-		<version>[1.0.0, 2.0.0]</version>
+		<version>[1.0.0, 2.0.0)</version>
 	</parent>
 	<artifactId>codedriver-inspect</artifactId>
-	<version>1.1.2</version>
+    <version>1.1.3</version>
 	<build>
 		<resources>
 			<resource>
