--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<version>[1.0.0, 2.0.0)</version>
 	</parent>
 	<artifactId>codedriver-inspect</artifactId>
-    <version>0.1.2.0-SNAPSHOP</version>
+    <version>0.1.2.0-SNAPSHOT</version>
 	<build>
 		<resources>
 			<resource>
